# skillkit

./: CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  configure.py  install.sh  pyproject.toml
.github/workflows/: ci.yml
commands/: ci.execute.md  ci.prepare.md  ci.ship.md  new-skill.md  pr-review-expert.md  qa.execute.md  qa.prepare.md  speckit.audit-resolve.md  speckit.audit.md  speckit.diagrams.md  speckit.prespec.md
lib/: __init__.py  models.json
skills/ci.execute/: SKILL.md  run.py
skills/ci.prepare/: SKILL.md  run.py
skills/ci.ship/: SKILL.md  run.py
skills/pr-review-expert/: SKILL.md  run.py
skills/qa.execute/: SKILL.md  run.py
skills/qa.execute/drivers/: __init__.py  http.py  shell.py  stress.py
skills/qa.execute/lib/: __init__.py  checkpoint.py  decision.py  progress.py  recovery.py
skills/qa.prepare/: SKILL.md  run.py
skills/qa.prepare/templates/: flow_prompt.md  infra_prompt.md  infra_steps.yaml  scale_prompt.md  stress_prompt.md  unit_prompt.md  unit_steps.yaml
skills/qa.prepare/templates/flow/: admin_denegado.yaml  cierre.yaml  completar.yaml  denuncias.yaml  errores.yaml  mandado.yaml  mensajes.yaml  oferta.yaml  qa_start.yaml  user_register.yaml  user_upload.yaml
skills/speckit.audit/: SKILL.md  gemma4-audit.Modelfile  run.py
skills/speckit.audit-resolve/: SKILL.md  run.py
skills/speckit.audit/scripts/: census-code.sh  detect-stage.sh  postspec_audit.py
skills/speckit.diagrams/: SKILL.md  run.py
skills/speckit.prespec/: SKILL.md  run.py
tests/: test_lib.py
