[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "skillkit"
version = "0.1.0"
description = "AI-powered engineering workflows: CI, QA, audit, reviews, diagrams"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["lib*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
